feat(routing): add NotFoundPage

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,6 +1,7 @@
 {
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
+  "Страница не найдена": "Страница не найдена",
   "Главная страница": "Главная страница",
   "Язык": "Русский",
   "Язык короткая версия": "RU",
