--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,6 +2,7 @@
   "Тестовый пример": "Test example",
   "Перевод": "Translate",
   "Главная страница": "Main page",
+  "Страница не найдена": "Not found page",
   "Язык": "English",
   "Язык короткая версия": "EN",
   "Войти": "Войти",
